name:                spl2-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kindaro/spl2-test#readme
license:             BSD3
license-file:        LICENSE
author:              Ignat Insarov
maintainer:          kindaro@gmail.com
copyright:           2016 Ignat Insarov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable spl2-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spl2-test
                     , plugins
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kindaro/spl2-test
